Fix button border on mobile

--- a/styles/button.css
+++ b/styles/button.css
@@ -1,4 +1,5 @@
 .card-button {
+    border: none;
     border-radius: 1em;
     width: 100%;
     cursor: pointer;
