--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,5 +1,5 @@
 nav {
-    margin-bottom: 5vh;
+    margin-bottom: 3vh;
 }
 nav img {
     width: 40vw;
